# proxyid

./: .gitignore  .tool-versions  LICENSE  Pipfile  README.md  conftest.py  makefile  mkdocs.yml  pytest-config-v1.ini  pytest-config-v2.ini  pytest-config-v3.ini  pytest.ini  requirements-all.txt  requirements-base.txt  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini  vscode.settings.sample
docs/: index.md  tutorial.md
docs/about/: index.md  license.md
docs/user-guide/: class-based-views.md  configuration.md  hiding-pks.md  index.md  installation.md  views.md
proxyid/: __init__.py  decorators.py  encoding.py  exceptions.py  mixins.py  utils.py
proxyid/utils/: __init__.py  factory.py  helpers.py
tests/: test_decorators.py  test_encoding.py  test_fixtures.py  test_mixins.py  test_settings.py  test_views.py
tests/django_mock_project/appmock/: models.py  urls.py  views.py
tests/django_mock_project/appmock/fixtures/: person.json
tests/django_mock_project/appmock/migrations/: 0001_initial.py
tests/django_mock_project/appmock/templates/: base.html
tests/django_mock_project/appmock/templates/appmock/: home.html  person_detail.html  person_list.html
tests/django_mock_project/core/: settings.py  urls.py
tests/django_mock_project_v1/appmock/: models.py  urls.py  views.py
tests/django_mock_project_v1/appmock/fixtures/: person.json
tests/django_mock_project_v1/appmock/migrations/: 0001_initial.py
tests/django_mock_project_v1/appmock/templates/: base.html
tests/django_mock_project_v1/core/: settings.py  urls.py
tests/django_mock_project_v2/appmock/: apps.py  models.py  urls.py
tests/django_mock_project_v2/core/: settings.py  urls.py
