[metadata]
name = proxyid
version = 0.1.0
author = Felipe Paes
author_email = felipepaes@disroot.org
description = A django utility to hide the primary key of a given model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/felipepaes/proxyid
project_urls =
    Bug Tracker = https://github.com/felipepaes/proxyid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: FreeBSD License
    Operating System :: OS Independent

install_requires = ['hashids']

[options]
package_dir =
    = proxyid
packages = find:
python_requires = >=3.6

[options.packages.find]
where = proxyid
