[metadata]
name = proxyid
version = attr: proxyid.version
author = Felipe Paes
author_email = felipepaes@disroot.org
description = A django utility to hide the primary key of a given model
long_description = file: README.md
long_description_content_type = text/markdown
license = FreeBSD License
url = https://github.com/felipepaes/proxyid
project_urls =
    Bug Tracker = https://github.com/felipepaes/proxyid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: FreeBSD License
    Operating System :: OS Independent

[options]
install_requires = hashids
packages = find:
python_requires = >=3.6
