[metadata]
name = proxyid
version = attr: proxyid.__version__
author = Felipe Paes
author_email = felipepaes@disroot.org
description = Proxyid hides your Django model primary key
long_description = file: README.md
long_description_content_type = text/markdown
license = FreeBSD License
url = https://github.com/felipepaes/proxyid
project_urls =
    Bug Tracker = https://github.com/felipepaes/proxyid/issues
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1

[options]
install_requires = hashids
packages = find:
python_requires = >=3.6
